fixed alignment issue

--- a/src/app/components/news/article-list/article-list.component.scss
+++ b/src/app/components/news/article-list/article-list.component.scss
@@ -143,7 +143,7 @@ section.all-list {
     padding-top: 100px;
     align-items: flex-start;
     justify-content: center;
-    grid-gap: 30px;
+    grid-gap: 40px;
     grid-row-gap: 100px;
     .news-container {
         width: 100%;
@@ -245,6 +245,7 @@ section.all-list {
             height: 25px;
             width: 25px;
             margin-top: 10px;
+            cursor: pointer;
         }
         img:hover {
             filter: brightness(0) invert(1);
